Fixes #229 - Label in Hebrew is overlapping with the marker - moved label to the bottom of the marker. Changed rtl inside the label lines to support multi line direction differences.

--- a/IsrealHiking.Web/controllers/markerPopup.css
+++ b/IsrealHiking.Web/controllers/markerPopup.css
@@ -5,7 +5,6 @@
     background: white;
     padding: 3px;
     border-radius: 6px;
-    direction: rtl;
     white-space: nowrap;
     border: 1px solid black;
     opacity: 0.8 !important;
